Repository Rest Configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,10 +22,12 @@ spring.data.rest.base-path=/api
 # JPA settings
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.hibernate.use-new-id-generator-mappings=false
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 
 # logging
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
 logging.level.org.hibernate.SQL=debug
 #logging.level.org.hibernate.type.descriptor.sql=trace
 logging.level.=error
+
+#in dorect sql insert after run the sql must be commit it...for read the data from my database
