--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username=c##opi
-spring.datasource.password=tonmoysahaopi
+spring.datasource.password=tonmoysaha
 
 
 # HikariCP settings
